After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675758 - encoders: Force keyframe does not work anymore
encoders: Force keyframe does not work anymore
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal blocker
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-09 15:34 UTC by Nicolas Dufresne (ndufresne)
Modified: 2012-05-10 14:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
video: Key unit event properties are optional (2.19 KB, patch)
2012-05-09 15:41 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2012-05-09 15:34:06 UTC
Forcing keyframe does not work anymore. The event is being ignored when field like timestamp, stream-time, etc. are missing. This breaks Farstream.
Comment 1 Nicolas Dufresne (ndufresne) 2012-05-09 15:41:24 UTC
Created attachment 213742 [details] [review]
video: Key unit event properties are optional
Comment 2 Tim-Philipp Müller 2012-05-09 15:44:16 UTC
Marking as blocker, since presumably a regression since the last release.

A unit test would be nice!
Comment 3 Nicolas Dufresne (ndufresne) 2012-05-09 18:23:09 UTC
Can also be seen at:
http://cgit.collabora.com/git/user/nicolas/gst-plugins-base.git/log/?h=675758-force-key-unit
Comment 4 Sebastian Dröge (slomo) 2012-05-10 14:11:34 UTC
Yes it's a regression with code that created the events manually (as was done before 0.10.36).

commit c2f52f81545471291c6df03b6f0fe91732bfdfa1
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Thu May 3 15:45:03 2012 -0400

    video: Key unit event properties are optional
    
    https://bugzilla.gnome.org/show_bug.cgi?id=675758