video: Key unit event properties are optional

https://bugzilla.gnome.org/show_bug.cgi?id=675758